Add works section to index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,81 @@
             </clipPath>
             </defs>
             </svg>
-            
-        </main>
+            </main>
+            <!-- Project Section -->
+
+  <section class="projects"> 
+    <div id="topic"><p>My Recent Works</p><hr></div>
+    <div class="project-row1">
+        <img id="img_01" src="images\img_01.png" alt="">
+    <div id="project-row1-RHS">
+        <h2 id="story">Multi-Post Stories</h2>
+        <p id="story-text">A daily selection of privately personalized
+            reads; no accounts or sign-ups required. has 
+             been the industry's standard dummy text ever
+            since the 1500s, when an unknown printer took 
+            a standard dummy text.</p>
+        <div class="lang-list"><p class="lang-button">css</p>
+        <p class="lang-button">html</p>
+        <p class="lang-button">bootstrap</p>
+        <p class="lang-button">Ruby</p></div>
+    <div><a id="goto_project">See Project</a></div>
+</div>
+    </div>
+
+    <!-- Project examples -->
+
+    <div class="project-row2">
+<div class="img-container"> <img src="images\img_1.png" alt="">
+     <p id="see-project-row2">See Project</p></div>
+<div class="img-container"> <img src="images\img_2.png" alt=""><h3 class="title-post">Data Dashboard <br> Healthcare</h3>
+<p class="supporting-text">A daily selection of privately personalized 
+   reads; no accounts or sign-ups required. 
+   has been the industry's standard</p>
+  <div class="project-link">
+    <p class="html">html</p>
+    <p class="bootstrap">bootstrap</p>
+    <p class="ruby">Ruby</p>
+</div>
+</div>
+<div class="img-container"> <img src="images\img_3.png" alt=""><h3 class="title-post">Website Protfolio </h3>
+    <p class="supporting-text">A daily selection of privately personalized
+       reads; no accounts or sign-ups required. 
+       has been the industry's standard</p>
+       <div class="project-link">
+        <p class="html">html</p>
+        <p class="bootstrap">bootstrap</p>
+        <p class="ruby">Ruby</p>
+    </div></div>
+    </div>
+    <div class="project-row2">
+        <div class="img-container"><img src="images\img_4.png" alt=""><h3 class="title-post">Profesional Art Printing Data More</h3>
+            <p class="supporting-text">A daily selection of privately personalized 
+                reads; no accounts or sign-ups required. 
+                has been the industry's standard</p>
+                <div class="project-link">
+                    <p class="html">html</p>
+                    <p class="bootstrap">bootstrap</p>
+                    <p class="ruby">Ruby</p>
+                </div></div>
+        <div class="img-container"> <img src="images\img_2.png" alt=""><h3 class="title-post">Data Dashboard <br> Healthcare</h3>
+            <p class="supporting-text">A daily selection of privately personalized 
+               reads; no accounts or sign-ups required. 
+               has been the industry's standard</p>
+               <div class="project-link">
+                <p class="html">html</p>
+                <p class="bootstrap">bootstrap</p>
+                <p class="ruby">Ruby</p>
+            </div></div>
+        <div class="img-container"> <img src="images\img_3.png" alt=""><h3 class="title-post">Website Protfolio </h3>
+        <p class="supporting-text">A daily selection of privately personalized
+           reads; no accounts or sign-ups required. 
+           has been the industry's standard</p><div class="project-link">
+            <p class="html">html</p>
+            <p class="bootstrap">bootstrap</p>
+            <p class="ruby">Ruby</p>
+        </div>
+            </div>
+  </section>
 </body>
 </html>
