--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         </nav>
     </header>
     <main id="container">
-        <header id="greetText">
-            <h1>Hey There.<br>
-                I'm Oluyemi</h1>
-        </header>
         <section>
+            <h1 id="greetText">Hey There.<br>
+                I'm Oluyemi</h1>
             <h2 id="jobTitle">I am a Software Developer</h2>
             <p id="description">I can help you build a product , feature or website Look through
                 some of my work and experience! If you like what you see and
