Add see-project-link to the remaining work-section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <p class="bootstrap">bootstrap</p>
                     <p class="ruby">Ruby</p>
                 </div>
-                <div><a id="goto_project">See Project</a></div>
+                <div><a class="goto_project">See Project</a></div>
             </div>
         </div>
 
@@ -130,6 +130,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
         <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
@@ -142,6 +143,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
         <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
@@ -154,6 +156,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
         <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
@@ -166,6 +169,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
         <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
@@ -178,6 +182,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
         <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
@@ -190,6 +195,7 @@
                 <p class="bootstrap">bootstrap</p>
                 <p class="ruby">Ruby</p>
             </div>
+            <p class="goto_project">See Project</p>
         </div>
 
     </section>
