--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
           <hr id="about-hr">
           <div class="list_lang">
-              <ul><li class="list_topic"><svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul><li class="li-first-child"><svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <rect x="0.772461" y="12.7279" width="18" height="18" transform="rotate(-45 0.772461 12.7279)" fill="#FF6B00"/>
                   </svg>
                   Language</li>
@@ -273,7 +273,7 @@
               <li>Html</li>
               <li>Css</li></ul>
 
-              <ul><li ><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul><li class="li-first-child"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <rect y="0.455811" width="18" height="18" fill="#FF6B00"/>
                   </svg>
                   Framworks</li>
@@ -283,7 +283,7 @@
               <li>CapyBara</li>
               <li>Selenium</li></ul>
 
-              <ul><li><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul><li class="li-first-child"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <rect y="0.455811" width="18" height="18" rx="9" fill="#FF6B00"/>
                   </svg>
                   Skills</li>
