made corrections to code review's comment

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         </section>
         <ul class="icon">
             <li><a href="https://twitter.com/OluyemiPaul99"><i class="fa fa-twitter fa-lg"></i> </a></li>
-            <li><a href="https://www.linkedin.com/in/paul-oluyemi-193966ab"><i class="fa fa-linkedin fa-lg"></i> </a>
-            </li>
+            <li><a href="https://www.linkedin.com/in/paul-oluyemi-193966ab"><i class="fa fa-linkedin fa-lg"></i> </a></li>
             <li><a href="#"><i class="fa fa-medium fa-lg"></i> </a></li>
             <li><a href="https://github.com/Ol-create"><i class="fa fa-github fa-lg"></i> </a></li>
             <li><a href="#"><i class="fa fa-angellist fa-lg"></i> </a></li>
@@ -97,9 +96,9 @@
     </main>
     <!-- Project/works Section -->
     <section class="work-section-grid">
-        <div class="recent-work grid-content">
+        <div class="recent-work content-flex">
             <div id="topic">
-                <p>My Recent Works</p>
+                <h2>My Recent Works</h2>
                 <hr>
             </div>
             <img id="img_01" src="images\img_01.png" alt="">
@@ -110,92 +109,92 @@
                     been the industry's standard dummy text ever
                     since the 1500s, when an unknown printer took
                     a standard dummy text.</p>
-                <div class="project-link">
-                    <p class="css">css</p>
-                    <p class="html">html</p>
-                    <p class="bootstrap">bootstrap</p>
-                    <p class="ruby">Ruby</p>
-                </div>
-                <div><a class="goto_project">See Project</a></div>
+                <ul class="project-link">
+                    <li class="css">css</li>
+                    <li class="html">html</li>
+                    <li class="bootstrap">bootstrap</li>
+                    <li class="ruby">Ruby</li>
+                </ul>
+                <a class="goto_project" href="#">See Project</a>
             </div>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex "><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+                <ul class="project-link">
+                    <li class="html"><a href="#">html</a></li>
+                    <li class="bootstrap"><a href="#">bootstrap</a></li>
+                    <li class="ruby"><a href="#">Ruby</a></li>
+                </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+            <ul class="project-link">
+                <li class="html"><a href="#">html</a></li>
+                <li class="bootstrap"><a href="#">bootstrap</a></li>
+                <li class="ruby"><a href="#">Ruby</a></li>
+            </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+                <ul class="project-link">
+                    <li class="html"><a href="#">html</a></li>
+                    <li class="bootstrap"><a href="#">bootstrap</a></li>
+                    <li class="ruby"><a href="#">Ruby</a></li>
+                </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+            <ul class="project-link">
+                <li class="html"><a href="#">html</a></li>
+                <li class="bootstrap"><a href="#">bootstrap</a></li>
+                <li class="ruby"><a href="#">Ruby</a></li>
+            </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+                <ul class="project-link">
+                    <li class="html"><a href="#">html</a></li>
+                    <li class="bootstrap"><a href="#">bootstrap</a></li>
+                    <li class="ruby"><a href="#">Ruby</a></li>
+                </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 grid-content"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
                 has been the industry's standard</p>
-            <div class="project-link">
-                <p class="html">html</p>
-                <p class="bootstrap">bootstrap</p>
-                <p class="ruby">Ruby</p>
-            </div>
-            <p class="goto_project">See Project</p>
+                <ul class="project-link">
+                    <li class="html"><a href="#">html</a></li>
+                    <li class="bootstrap"><a href="#">bootstrap</a></li>
+                    <li class="ruby"><a href="#">Ruby</a></li>
+                </ul>
+            <a class="goto_project" href="#">See Project</a>
         </div>
 
     </section>
@@ -258,24 +257,20 @@
       <h2 id="about-title">About me</h2>
       <P id="about-text">Hello I’m a software developer! I can help you build a product , 
           feature or website Look through some of my work and experience! 
-          If you like what you see and have a project you need coded, don’t 
+          If you like what you see and have a project you need coded, don’t  
           hestiate to contact me.</P>
-          <p id="get-my-resume">Get My Resume</p>
+          <a id="get-my-resume" href="#">Get My Resume</a>
 
           <hr id="about-hr">
           <div class="list_lang">
-              <ul><li class="li-first-child"><svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect x="0.772461" y="12.7279" width="18" height="18" transform="rotate(-45 0.772461 12.7279)" fill="#FF6B00"/>
-                  </svg>
+              <ul><li class="li-first-child"><span><img class="lang-img-icon"src="./images/diamond.png" alt=""></span>
                   Language</li>
               <li>Javascript</li>
               <li>Ruby</li>
               <li>Html</li>
               <li>Css</li></ul>
 
-              <ul><li class="li-first-child"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect y="0.455811" width="18" height="18" fill="#FF6B00"/>
-                  </svg>
+              <ul><li class="li-first-child"><span><img class="lang-img-icon"src="./images/square.png" alt=""></span>
                   Framworks</li>
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
@@ -283,9 +278,7 @@
               <li>CapyBara</li>
               <li>Selenium</li></ul>
 
-              <ul><li class="li-first-child"><svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect y="0.455811" width="18" height="18" rx="9" fill="#FF6B00"/>
-                  </svg>
+              <ul><li class="li-first-child"><span><img class="lang-img-icon" src="./images/circle.png" alt=""></span>
                   Skills</li>
               <li>Codekit</li>
               <li>Github</li>
@@ -295,7 +288,24 @@
           </div>
         </div>
         <div class="form_section">
-
+        <!-- <p id="get-in-touch-text">
+            I'm always interested in hearing 
+            about new projects, so if you'd
+             like to chat please get in touch.
+        </p> -->
+        <!-- <form action="">
+            <label for="name">
+                Full name <br>
+                <input type="text">
+            </label>
+            <label for="email">
+                Email address <br>
+                <input type="email">
+            </label>
+            <label for="commet-box">
+                <input type="textarea" placeholder="Enter text here">
+            </label>
+        </form> -->
         </div>
 </section>
 </body>
