resolve webhint err

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h2>My Recent Works</h2>
                 <hr>
             </div>
-            <img id="img_01" src="images\img_01.png" alt="">
+            <img id="img_01" src="./images/img_01.png" alt="">
             <div id="project-row1-RHS">
                 <h2 id="story">Multi-Post Stories</h2>
                 <p id="story-text">A daily selection of privately personalized
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="content_1 content-flex "><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex "><img src="./images/img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
@@ -196,7 +196,7 @@
         </div>
 
     </section>
-</section>
+
 
 <!-- About-me Section -->
 
@@ -212,7 +212,7 @@
 
           <hr id="about-hr">
           <div class="list_lang">
-              <ul><li class="li-first-child"><span><img class="lang-img-icon"src="./images/diamond.png" alt=""></span>
+              <ul><li class="li-first-child"><span><img class="lang-img-icon" src="./images/diamond.png" alt=""></span>
                   Language</li>
               <li>Javascript</li>
               <li>Ruby</li>
