--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="./images/img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
@@ -219,7 +219,7 @@
               <li>Html</li>
               <li>Css</li></ul>
 
-              <ul><li class="li-first-child"><span><img class="lang-img-icon"src="./images/square.png" alt=""></span>
+              <ul><li class="li-first-child"><span><img class="lang-img-icon" src="./images/square.png" alt=""></span>
                   Framworks</li>
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
