--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="./images/img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
@@ -169,7 +169,7 @@
             <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="./images/img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
@@ -182,7 +182,7 @@
             <a class="goto_project" href="#">See Project</a>
         </div>
 
-        <div class="content_1 content-flex"><img src="images\img_4.png" alt="">
+        <div class="content_1 content-flex"><img src="./images/img_4.png" alt="">
             <h3 class="title-post">Profesional Art Printing Data More</h3>
             <p class="supporting-text">A daily selection of privately personalized
                 reads; no accounts or sign-ups required.
